--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-speech-recognition": "^3.10.0"
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/node": "^20",
