--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.5.0",
     "@tabler/icons-react": "^3.21.0",
+    "axios": "^1.7.7",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.2",
     "openai": "^4.71.0",
